# Figures

./: CMakeLists.txt  Circle.cpp  Circle.h  Ellipse.cpp  Ellipse.h  Figure.cpp  Figure.h  Rectangle.cpp  Rectangle.h  Square.cpp  Square.h  Triangle.cpp  Triangle.h  main.cpp
